--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,7 @@ rootProject.name = 'wildfly-issue'
 
 include 'module1'
 include 'module1:ejb'
+include 'module1:app1'
 include 'module2'
 include 'module2:ejb'
+include 'module2:app2'
